# arrowport

./: README.md  __main__.py  cli.py  pyproject.toml  requirements.txt
api/: app.py
art/: duckdb-arrow.md
benchmarks/: benchmark.py
config/: settings.py  streams.py  streams.yaml
core/: db.py  flight.py  metrics.py  tasks.py
models/: arrow.py
src/arrowport/: CHANGELOG.md  RELEASE_NOTES_v0.2.0.md  __main__.py  cli.py  pyproject.toml  requirements.txt
src/arrowport/api/: app.py
src/arrowport/art/: article.md  design.md
src/arrowport/benchmarks/: benchmark.py
src/arrowport/config/: streams.py  streams.yaml
src/arrowport/core/: db.py  flight.py  storage.py
src/arrowport/examples/: delta_demo.py
src/arrowport/models/: arrow.py
src/arrowport/tests/: test_arrow.py  test_batch.py
tests/: conftest.py  test_api.py
