[tool.poetry]
name = "arrowport"
version = "0.2.0"
description = "High-performance bridge from Arrow IPC streams to DuckDB and Delta Lake"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{ include = "arrowport" }]

[tool.poetry.dependencies]
python = "^3.9"
duckdb = "^1.3.0"
pyarrow = "^20.0.0"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
pydantic = "^2.11.5"
pydantic-settings = "^2.9.1"
structlog = "^25.3.0"
prometheus-client = "^0.22.0"
rich = "^14.0.0"
click = "^8.2.1"
PyYAML = "^6.0.2"
python-multipart = "^0.0.20"
zstandard = "^0.23.0"
lz4 = "^4.4.4"
watchdog = "^6.0.0"
deltalake = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
black = "^24.1.0"
isort = "^5.13.0"
mypy = "^1.8.0"
ruff = "^0.2.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
arrowport = "arrowport.cli:cli"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=arrowport --cov-report=term-missing -v"

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
